# vaultpay-api

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py
app/api/: api.py  payments.py
app/api/v1/endpoints/: auth.py  users.py
app/core/: auth.py  config.py  security.py
app/crud/: user.py
app/db/: base.py  session.py
app/models/: payment.py  user.py
app/schemas/: payments.py  user.py
migrations/: env.py
migrations/versions/: 684f99973db2_create_payments_table.py  6e8ddc2821d9_create_payments_table.py  fdd2017dd427_create_users_table.py
scripts/: insert_users.py
